--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".gui.CadastroActivity">
+        <activity android:name=".gui.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".gui.MainActivity"
+            android:label="@string/feed"
+            >
+        </activity>
+
+        <activity
+            android:name=".gui.CadastroActivity"
+            android:label="@string/cadastro"
+            >
         </activity>
     </application>
 
