--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.android.support:cardview-v7:26.0.+'
+    compile 'com.android.support:recyclerview-v7:26.0.+'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
